--- a/admin/src/components/Layout/styles.css
+++ b/admin/src/components/Layout/styles.css
@@ -1,4 +1,13 @@
 .sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #e2e2e2;
+    padding: 60px;
+    box-shadow: inset 0 0 2px gray;
+}
+.sidebar{
     margin: 0;
     padding:60px 10px 60px 0px!important;
 
@@ -12,7 +21,7 @@
 .sidebar ul li a{
     display: block;
     color: #333;
-    padding: 5px 10px;
+    padding: 5px 15px;
     box-sizing: border-box;
     margin: 5px 0 5px 0px;
     text-decoration: none;
@@ -22,4 +31,7 @@
     color: white;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+}
+.sidebar ul{
+    padding-right:0 !important;
 }
