--- a/admin/src/containers/Products/styles.css
+++ b/admin/src/containers/Products/styles.css
@@ -3,3 +3,20 @@
     display: flex;
     justify-content: space-between;
 }
+.table {
+    text-align: right;
+}
+.title-product{
+    font-size: 12px;
+    font-weight: bold;
+}
+.product-image{
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+}
+.product-image img{
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
