--- a/admin/src/components/Layout/styles.css
+++ b/admin/src/components/Layout/styles.css
@@ -1,7 +1,7 @@
 .sidebar{
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     bottom: 0;
     background-color: #e2e2e2;
     padding: 60px;
@@ -13,7 +13,7 @@
 
 }
 .sidebar ul{
-    text-align: right;
+    text-align: left;
 }
 .sidebar ul li{
     list-style: none;
@@ -33,5 +33,5 @@
     border-top-right-radius: 5px;
 }
 .sidebar ul{
-    padding-right:0 !important;
+    padding-left:0 !important;
 }
